[package]
name = "env_applier"
version = "0.1.1"
authors = ["Jean-Marc Fiaschi"]
edition = "2018"
description = "Apply environment variables on an object"
license = "GPL-3.0"
include = [
    "src/*",
    "benches/*",
    "Cargo.toml",
    "LICENCE"
]
repository = "https://github.com/jmfiaschi/env_applier"
keywords = ["env", "config", "apply", "applier"]
readme = "README.md"

[dependencies]
regex = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
